@@ -111,6 +111,11 @@
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
       <scope>test</scope>
     </dependency>
@@ -209,8 +214,9 @@
     </dependency>
 
     <dependency>
-      <artifactId>commons-compress</artifactId>
-      <groupId>org.apache.commons</groupId>
+      <groupId>commons-net</groupId>
+      <artifactId>commons-net</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -557,11 +563,6 @@
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-webapp</artifactId>
-      <version>9.4.56.v20240826</version>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-rewrite</artifactId>
       <version>9.4.56.v20240826</version>
     </dependency>
@@ -571,11 +572,13 @@
   <packaging>jar</packaging>
 
   <build>
-
     <finalName>${project.artifactId}</finalName>
     <resources>
       <resource>
         <directory>${project.basedir}/ldap/generated</directory>
+      </resource>
+      <resource>
+        <directory>${project.basedir}/target/generated-resources</directory>
       </resource>
       <resource>
         <directory>${project.basedir}/src/main/resources</directory>
@@ -743,10 +746,46 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <forkCount>4</forkCount>
+          <reuseForks>false</reuseForks>
+          <parallel>classes</parallel>
+          <argLine>@{argLine} -Dserver.dir=${project.basedir}
+            -Djunit.jupiter.execution.parallel.enabled=true
+            -Djunit.jupiter.execution.parallel.mode.classes.default=concurrent
+            -Dzimbra.config=${project.basedir}/src/test/resources/localconfig-test.xml
+            -Dlog4j.configurationFile=${project.basedir}/src/test/resources/log4j-test.properties
+            -Dfile.encoding=UTF-8 -Djava.locale.providers=COMPAT,SPI
+          </argLine>
+          <excludes>
+            <exclude>com.zimbra.cs.mailbox.CalendarItemTest.java</exclude>
+            <exclude>com.zimbra.cs.service.mail.CalendarRequestTest.java</exclude>
+            <exclude>com.zimbra.cs.service.mail.GetMsgTest.java</exclude>
+            <exclude>com.zimbra.cs.service.mail.SearchActionTest.java</exclude>
+          </excludes>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <forkCount>4</forkCount>
+          <reuseForks>false</reuseForks>
+          <parallel>classes</parallel>
+          <argLine>@{argLine} -Dserver.dir=${project.basedir}
+            -Djunit.jupiter.execution.parallel.enabled=true
+            -Djunit.jupiter.execution.parallel.mode.classes.default=concurrent
+            -Dlog4j.configurationFile=${project.basedir}/src/test/resources/log4j-test.properties
+            -Dzimbra.config=${project.basedir}/src/test/resources/localconfig-test.xml
+            -Dfile.encoding=UTF-8 -Djava.locale.providers=COMPAT,SPI
+          </argLine>
+          <excludes>
+            <exclude>com.zimbra.cs.mailbox.CalendarItemTest.java</exclude>
+            <exclude>com.zimbra.cs.service.mail.CalendarRequestTest.java</exclude>
+            <exclude>com.zimbra.cs.service.mail.GetMsgTest.java</exclude>
+            <exclude>com.zimbra.cs.service.mail.SearchActionTest.java</exclude>
+          </excludes>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
